--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,4 @@
-/*{
-height: 100%;
-background: red;
-}*/
-body{
-  background: #ffffff;
-}
+
 h3{
 text-align: center;
 margin: 0 auto;
@@ -83,4 +77,11 @@ a:link, a:visited {
 
 a:hover, a:active {
     background-color: #000000;
+}
+.login-face{
+  width:15%;
+  margin: 0 auto;
+}
+span{
+  width: 100%;
 }
